# NekoGroup

./: AUTHORS  CMakeLists.txt  INSTALL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  command.c  command.h  config.h.in  config.ini  configure  configure.ac  core.c  core.h  db.txt  debug.c  debug.h  log.c  log.h  main.c  ng-bot.c  ng-bot.h  ng-cmd.c  ng-cmd.h  ng-common.h  ng-config.c  ng-config.h  ng-core.c  ng-core.h  ng-db.c  ng-db.h  ng-main.c  ng-main.h  ng-utils.c  ng-utils.h
cmake/: UseGlibMarshal.cmake
data/: config.ini  prefs.xml  status.xml  xmpp-caps.xml
password-helper/: Makefile  ng-password-helper.c  ng-password-helper.h
po/: CMakeLists.txt  NekoGroup.pot  POTFILES.in  POTFILES.in.in  ja_JP.po  zh_CN.po  zh_HK.po  zh_TW.po
src/: CMakeLists.txt  Makefile.am  Makefile.in  main.c  ng-bot.c  ng-bot.h  ng-cmd.c  ng-cmd.h  ng-common.h  ng-config.c  ng-config.h  ng-core.c  ng-core.h  ng-db.c  ng-db.h  ng-main.c  ng-main.h  ng-marshal.c  ng-marshal.h  ng-utils.c  ng-utils.h  prj.NekoGroup.gschema.xml
src/password-helper/: CMakeLists.txt  ng-password-helper.c
